<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroNota">


    <TextView
        android:id="@+id/tituloRegistroNota"
        android:layout_width="wrap_content"
        android:layout_height="54dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="216dp"
        android:text="@string/registro_de_nota"
        android:textColor="@color/md_red_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelecionarAlumno"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/md_red_700"
        android:text="@string/seleccionar_alumno"
        android:textColor="@color/md_white_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTxtNombreAlumno"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="132dp"
        android:autofillHints="Pulsa el boton"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/nombre_del_alumno"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelecionarAsignatura"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/md_red_700"
        android:importantForAutofill="yes"
        android:text="@string/seleccionar_asignatura"
        android:textColor="@color/md_white_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTxtSelecionarAsignatura"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:autofillHints="Pulsa el boton"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/asignatura"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTxtNotaExamen"
        android:layout_width="190dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="336dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nota_del_examen"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/editTxtNotaActividades"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTxtNotaActividades"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nota_de_actividades"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTxtNotaExamen"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <EditText
        android:id="@+id/editTxtNotaFinal"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="240dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/nota_final"
        android:inputType="none"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="136dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/md_red_700"
        android:text="@string/calcular_nota"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="42dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/md_red_700"
        android:text="@string/guardar_datos"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/md_red_700"
        android:text="@string/limpiar_datos"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>