<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".SelecionAsignatura">


    <TextView
        android:id="@+id/tvSelectAsignatura"
        android:layout_width="317dp"
        android:layout_height="37dp"
        android:layout_marginStart="76dp"

        android:layout_marginTop="68dp"
        android:text="@string/selecci_n_de_asignatura"
        android:textColor="@color/md_red_700"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/pmdm"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/ad"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="248dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/psp"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig6"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="393dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/iacc"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="294dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/di"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig5"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="343dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/sge"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsig7"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="443dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/ios"
        android:textAlignment="textStart"
        android:textColor="@color/md_black_1000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/codAsig"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/selciona_una_asignatura"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAceptar"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/md_white_1000"
        android:text="@string/aceptar_SeleccionarAsignatura"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp"
        app:icon="@drawable/icon_check"
        app:iconSize="20dp"
        app:iconTint="@color/md_black_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/md_lime_A700"
        app:strokeColor="@color/md_black_1000"
        app:strokeWidth="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/md_white_1000"
        android:text="@string/cancelar_SeleccionarAlumno"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp"
        app:icon="@drawable/icon_cancel"
        app:iconSize="20dp"
        app:iconTint="@color/md_black_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/md_red_700"
        app:strokeColor="@color/md_black_1000"
        app:strokeWidth="4dp" />


</androidx.constraintlayout.widget.ConstraintLayout>